--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "console-logger-contentful",
   "version": "1.0.0",
-  "description": "Utility to allow console logging of the Contentful requests for an application.  Useful when you are doing server sidde rendering and want to have a good log of what Contentful Content Delivery API requests are being made to build the pages.",
+  "description": "Utility to allow console logging of the Contentful requests for an application.  Useful when you are doing server side rendering and want to have a good log of what Contentful Content Delivery API requests are being made to build the pages.",
   "main": "log-handlers.mjs",
   "type": "module",
   "scripts": {
