--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "@eslint/js": "^9.0.0",
     "eslint": "^9.0.0",
     "globals": "^15.0.0"
+  },
+  "dependencies": {
+    "chalk": "^5.3.0"
   }
 }
